RESOLVED FIXED33918
MSAA: accSelect() is not implemented
https://bugs.webkit.org/show_bug.cgi?id=33918
Summary MSAA: accSelect() is not implemented
Jon Honeycutt
Reported 2010-01-20 13:19:34 PST
The IAccessible::accSelect() function is not implemented. <rdar://problem/7436861>
Attachments
patch (23.82 KB, patch)
2010-01-20 13:30 PST, Jon Honeycutt
darin: review+
jhoneycutt: commit-queue-
Jon Honeycutt
Comment 1 2010-01-20 13:30:57 PST
Darin Adler
Comment 2 2010-01-20 14:10:56 PST
Comment on attachment 47060 [details] patch > + // FIXME: Should implement SELFLAG_EXTENDSELECTION. For now, we just return > + // S_OK, matching Firefox. Is that really better than returning E_INVALIDARG?
Jon Honeycutt
Comment 3 2010-01-20 14:33:22 PST
(In reply to comment #2) > (From update of attachment 47060 [details]) > > + // FIXME: Should implement SELFLAG_EXTENDSELECTION. For now, we just return > > + // S_OK, matching Firefox. > > Is that really better than returning E_INVALIDARG? I'm not sure whether any clients use this flag, but I'd rather match Firefox's behavior. Thanks for the review! Landed in r53567.
Jon Honeycutt
Comment 4 2011-03-31 16:27:50 PDT
*** Bug 29124 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.